// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time."
            id="kbn.management.createIndexPattern.stepTime.fieldLabel"
            values={Object {}}
          />
        </p>
        <p>
          <FormattedMessage
            defaultMessage="You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="kbn.management.createIndexPattern.stepTime.fieldWarningLabel"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <ForwardRef
        alignItems="center"
        gutterSize="xs"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="kbn.management.createIndexPattern.stepTime.fieldHeader"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiLoadingSpinner
            size="s"
          />
        </EuiFlexItem>
      </ForwardRef>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={true}
      name="timeField"
      options={
        Array [
          Object {
            "text": "Loading…",
            "value": "",
          },
        ]
      }
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time."
            id="kbn.management.createIndexPattern.stepTime.fieldLabel"
            values={Object {}}
          />
        </p>
        <p>
          <FormattedMessage
            defaultMessage="You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="kbn.management.createIndexPattern.stepTime.fieldWarningLabel"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <ForwardRef
        alignItems="center"
        gutterSize="xs"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="kbn.management.createIndexPattern.stepTime.fieldHeader"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <ForwardRef
            className="timeFieldRefreshButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Refresh"
              id="kbn.management.createIndexPattern.stepTime.refreshButton"
              values={Object {}}
            />
          </ForwardRef>
        </EuiFlexItem>
      </ForwardRef>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time."
            id="kbn.management.createIndexPattern.stepTime.fieldLabel"
            values={Object {}}
          />
        </p>
        <p>
          <FormattedMessage
            defaultMessage="You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="kbn.management.createIndexPattern.stepTime.fieldWarningLabel"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <ForwardRef
        alignItems="center"
        gutterSize="xs"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="kbn.management.createIndexPattern.stepTime.fieldHeader"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <ForwardRef
            className="timeFieldRefreshButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Refresh"
              id="kbn.management.createIndexPattern.stepTime.refreshButton"
              values={Object {}}
            />
          </ForwardRef>
        </EuiFlexItem>
      </ForwardRef>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="The indices which match this index pattern don't contain any time fields."
        id="kbn.management.createIndexPattern.stepTime.field.noTimeFieldsLabel"
        values={Object {}}
      />
    </p>
  </EuiText>
</EuiForm>
`;
